// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AcronymInfo should match snapshot 1`] = `
<div
  className="letter"
  onClick={[Function]}
  onMouseLeave={[Function]}
  onMouseOver={[Function]}
>
  <h2>
    S
  </h2>
</div>
`;

exports[`AcronymInfo should render AcronymInfo when showDetails is true 1`] = `
<div
  className="letter"
  onClick={[Function]}
  onMouseLeave={[Function]}
  onMouseOver={[Function]}
>
  <h2>
    S
  </h2>
  <AcronymInfo
    stageDescription="Setup the conditions required to execute the action on your Subject Under Test"
    stageName="Setup"
  />
</div>
`;
